...
            "value" : "Cancel"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
        }
      }
    },
    "action.checkIn" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "拍照"
          }
        }
      }
    },
    "info.confirm" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirm details"
          }
...
            "state" : "translated",
            "value" : "重要提示"
          }
        }
      }
    },
    "info.library" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose from photo library"
...
            "state" : "translated",
            "value" : "从手机相册选择"
          }
        }
      }
    },
    "info.male" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Male"
...
            "state" : "translated",
            "value" : "购买未完成，请稍后重试。"
          }
        }
      }
    },
    "membership.restore" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restore"
...
            "state" : "translated",
            "value" : "口号"
          }
        }
      }
    },
    "profile.nickname" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "KeepUpper"
...
            "state" : "translated",
            "value" : "个人信息"
          }
        }
      }
    },
    "profile.premium" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Premium"
          }
...
            "state" : "translated",
            "value" : "给个好评"
          }
        }
      }
    },
    "profile.settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Personal settings"
...
            "state" : "translated",
            "value" : "修改"
          }
        }
      }
    },
    "settings.firstWeekday" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "First day of week"
...
            "state" : "translated",
            "value" : "偏好设置"
          }
        }
      }
    },
    "startup.agree" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agree and Continue"
...
